<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/instruction_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/instruction_text_view"
        android:gravity="center_horizontal"
        android:textSize="23dp"
         />
    <TextView
        android:id="@+id/guesses_remaining_text_view"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="18dp"
        android:text="@string/guesses_remaining_text_view"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <EditText
            android:id="@+id/user_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/text_box"/>
        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background_submit"
            android:text="@string/submit_button"/>
    </LinearLayout>
    <TextView
        android:id="@+id/attempted_anwsers_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/attempted_answers_text"/>

    <TextView
        android:id="@+id/numberTest_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/game_over_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:visibility="invisible"/>
        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background_reset"
            android:text="@string/reset_button"
            android:visibility="invisible"/>
    </LinearLayout>


</LinearLayout>
